<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/title_system_units_preferences">

        <ListPreference
                app:key="unitsOfMeasurement"
                app:title="@string/title_system_units_preference"
                app:useSimpleSummaryProvider="true"
                app:entries="@array/units"
                app:entryValues="@array/units_values"/>
    </PreferenceCategory>

    <PreferenceCategory
            app:title="@string/title_other_units_preferences">

        <DropDownPreference
                app:key="temperatureUnit"
                app:title="@string/title_temperature_unit_preference"
                app:useSimpleSummaryProvider="true"
                app:entries="@array/temperature_units"
                app:entryValues="@array/temperature_units_values"/>

        <DropDownPreference
                app:key="windSpeedUnit"
                app:title="@string/title_wind_speed_unit_preference"
                app:useSimpleSummaryProvider="true"
                app:entries="@array/wind_speed_units"
                app:entryValues="@array/wind_speed_units_values"/>

        <DropDownPreference
                app:key="pressureUnit"
                app:title="@string/title_pressure_unit_preference"
                app:useSimpleSummaryProvider="true"
                app:entries="@array/pressure_units"
                app:entryValues="@array/pressure_units_values"/>

    </PreferenceCategory>

</PreferenceScreen>